--- a/template/accordion/accordion-group.html
+++ b/template/accordion/accordion-group.html
@@ -1,8 +1,28 @@
-<div role="tab" id="{{::headingId}}" aria-selected="{{isOpen}}" class="card-header" ng-keypress="toggleOpen($event)">
-  <h5 class="mb-0">
-    <a role="button" data-toggle="collapse" href aria-expanded="{{isOpen}}" aria-controls="{{::cardId}}" tabindex="0" class="accordion-toggle"  ng-click="toggleOpen()" uib-accordion-transclude="heading" ng-disabled="isDisabled" uib-tabindex-toggle><span uib-accordion-header ng-class="{'text-muted': isDisabled}">{{heading}}</span></a>
-  </h5>
-</div>
-<div id="{{::cardId}}" aria-labelledby="{{::headingId}}" aria-hidden="{{!isOpen}}" role="tabcard" class="card-collapse collapse" uib-collapse="!isOpen">
-  <div class="card-body" ng-transclude></div>
+<div class="accordion" id="{{::accordionId}}">
+	<div class="accordion-item">
+	  <h5 class="accordion-header" role="tab" id="{{::headingId}}" aria-selected="{{isOpen}}" class="accordion" ng-keypress="toggleOpen($event)">
+		<button class="accordion-button"
+				type="button"
+				data-bs-toggle="collapse"
+				data-bs-target="#{{::cardId}}"
+				aria-expanded="{{::isOpen}}"
+				aria-controls="{{::cardId}}"
+				ng-click="toggleOpen()"
+				ng-disabled="isDisabled"
+				uib-accordion-transclude="heading"
+				uib-tabindex-toggle>
+			<span uib-accordion-header ng-class="{'text-muted': isDisabled}">{{heading}}</span>
+		</button>
+	  </h5>
+	  <div id="{{::cardId}}" class="accordion-collapse collapse"
+				aria-labelledby="{{::headingId}}"
+				aria-hidden="{{!isOpen}}"
+				role="tabcard"
+				uib-collapse="!isOpen"
+				ng-class="{'show': isOpen}"
+				data-bs-parent="#{{accordionId}}">
+			<div class="accordion-body" ng-transclude>
+		</div>
+	  </div>
+	</div>
 </div>
