--- a/template/alert/alert.html
+++ b/template/alert/alert.html
@@ -1,5 +1,3 @@
-<button ng-show="closeable" type="button" class="close" ng-click="close({$event: $event})">
-  <span aria-hidden="true">&times;</span>
-  <span class="sr-only">Close</span>
+<button ng-show="closeable" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" ng-click="close({$event: $event})">
 </button>
 <div ng-transclude></div>
