--- a/template/carousel/carousel.html
+++ b/template/carousel/carousel.html
@@ -1,14 +1,18 @@
 <div class="carousel-inner" ng-transclude></div>
 <a role="button" href class="carousel-control-prev" ng-click="prev()" ng-class="{ disabled: isPrevDisabled() }" ng-show="slides.length > 1">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+    <span class="visually-hidden">Previous</span>
 </a>
 <a role="button" href class="carousel-control-next" ng-click="next()" ng-class="{ disabled: isNextDisabled() }" ng-show="slides.length > 1">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
+    <span class="visually-hidden">Next</span>
 </a>
-<ol class="carousel-indicators" ng-show="slides.length > 1">
-  <li ng-repeat="slide in slides | orderBy:indexOfSlide track by $index" ng-class="{ active: isActive(slide) }" ng-click="select(slide)">
-    <span class="sr-only">slide {{ $index + 1 }} of {{ slides.length }}<span ng-if="isActive(slide)">, currently active</span></span>
-  </li>
-</ol>
+<div class="carousel-indicators" ng-show="slides.length > 1">
+  <button type="button"
+  		ng-repeat="slide in slides | orderBy:indexOfSlide track by $index"
+		data-bs-target=""
+		ng-class="{ active: isActive(slide) }"
+		ng-click="select(slide)">
+    <span class="visually-hidden">slide {{ $index + 1 }} of {{ slides.length }}<span ng-if="isActive(slide)">, currently active</span></span>
+  </button>
+</div>
